<resources>
    <string name="app_name">DeepMehta_ MAPD711_Assignment4</string>
    <string name="Email">Email</string>
    <string name="password">Password</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="postalCode">Postal Code</string>
    <string name="login">Login</string>
    <string name="createAccount">Create Account</string>
    <string name="register_user">New user? Register here</string>
    <string name="billing_info">Billing Info:</string>
    <string name="place_order">Place Order</string>
    <string name="cancelled">Cancelled</string>
    <string name="order_history">Order History</string>
    <string name="profile">Profile</string>
    <string name="orderStatus">Order Status: </string>
    <string name="update_info">Update Info</string>
</resources>