<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/sixteen_dp"
    tools:context=".RegistrationActivity">


    <EditText
        android:id="@+id/email_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/password_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/firstName_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/firstName" />

    <EditText
        android:id="@+id/lastName_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/lastName" />

    <EditText
        android:id="@+id/address_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/address" />

    <EditText
        android:id="@+id/city_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/postalCode_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/sixteen_dp"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:layout_marginRight="@dimen/sixteen_dp"
        android:hint="@string/postalCode" />

    <Button
        android:id="@+id/signIn_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sixteen_dp"
        android:text="@string/createAccount" />

</LinearLayout>